--- a/dz_1_mate/index.html
+++ b/dz_1_mate/index.html
@@ -55,6 +55,7 @@
             <img src="img/table2.jpg" alt="table2">
             <img src="img/table3.jpg" alt="table3">
         </div>
+       </div>
         <div class="statistics">
             <div class="parts">
                 <div class="part">
